k8s/gcloud-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: messi-nodejs
  template:
    metadata:
      labels:
        component: messi-nodejs
    spec:
      containers:
        - name: messi
          image: asia.gcr.io/messi-271108/messi
          ports:
            - containerPort: 3000
