k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: messi-pod
  labels:
    components: messi-nodejs
spec:
  containers:
    - name: messi
      image: nguyenminhtiend/messi
      ports:
        - containerPort: 3000
