k8s/nodejs.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-employee
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nodejs-employee
  template:
    metadata:
      labels:
        component: nodejs-employee
    spec:
      containers:
        - name: employee
          image: employee-service
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-department
spec:
  replicas: 1
  selector:
    matchLabels:
      component: nodejs-department
  template:
    metadata:
      labels:
        component: nodejs-department
    spec:
      containers:
        - name: department
          image: nguyenminhtiend/messi-department
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: employee-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: nodejs-employee
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: department-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: nodejs-department
  ports:
    - port: 3001
      targetPort: 3001
