k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: messi-port
spec:
  type: NodePort
  ports:
    - port: 3050
      targetPort: 3000
      nodePort: 31515
  selector:
    component: messi-nodejs
