k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    # UPDATE THIS LINE ABOVE
spec:
  rules:
    - http:
        paths:
          - path: /api/departments
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: department-cluster-ip
              servicePort: 3001
          - path: /api/users
            # UPDATE THIS LINE ABOVE
            backend:
              serviceName: employee-cluster-ip
              servicePort: 3000
